made improvements to slides and prev/next buttons

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -206,31 +206,31 @@
             <!-- images shown in modal -->
             <div class="lb-slides">
                 <div class="lb-numbertext">1 / 7</div>
-                <img class="lb-img" src="https://picsum.photos/seed/abcd/300/200" style="width:100%">
+                <img class="lb-img" src="https://picsum.photos/seed/abcd/300/200">
             </div>
             <div class="lb-slides">
                 <div class="lb-numbertext">2 / 7</div>
-                <img class="lb-img" src="https://picsum.photos/seed/efgh/300/200" style="width:100%">
+                <img class="lb-img" src="https://picsum.photos/seed/efgh/300/200">
             </div>
             <div class="lb-slides">
                 <div class="lb-numbertext">3 / 7</div>
-                <img class="lb-img" src="https://picsum.photos/seed/ijkl/300/200" style="width:100%">
+                <img class="lb-img" src="https://picsum.photos/seed/ijkl/300/200">
             </div>
             <div class="lb-slides">
                 <div class="lb-numbertext">4 / 7</div>
-                <img class="lb-img" src="https://picsum.photos/seed/mnop/300/200" style="width:100%">
+                <img class="lb-img" src="https://picsum.photos/seed/mnop/300/200">
             </div>
             <div class="lb-slides">
                 <div class="lb-numbertext">5 / 7</div>
-                <img class="lb-img" src="https://picsum.photos/seed/qrst/300/200" style="width:100%">
+                <img class="lb-img" src="https://picsum.photos/seed/qrst/300/200">
             </div>
             <div class="lb-slides">
                 <div class="lb-numbertext">6 / 7</div>
-                <img class="lb-img" src="https://picsum.photos/seed/uvwx/300/200" style="width:100%">
+                <img class="lb-img" src="https://picsum.photos/seed/uvwx/300/200">
             </div>
             <div class="lb-slides">
                 <div class="lb-numbertext">7 / 7</div>
-                <img class="lb-img" src="https://picsum.photos/seed/yzyz/300/200" style="width:100%">
+                <img class="lb-img" src="https://picsum.photos/seed/yzyz/300/200">
             </div>
             <!-- left & right buttons -->
             <a class="lb-prev" onclick="lb_plusSlides(-1)">&#10094;<small>&#10094;&#10094;&#10094;</small></a>
