fixed slideshow image captions

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -237,7 +237,7 @@
             <a class="lb-next" onclick="lb_plusSlides(1)"><small>&#10095;&#10095;&#10095;</small>&#10095;</a>
             <!-- caption under the image -->
             <div class="lb-caption-container">
-                <p id="lb_caption"></p>
+                <p id="lb_caption" class="lb-caption"></p>
             </div>
             <!-- here are the modal thumbnails -->
 <!--
