--- a/public_html/index.html
+++ b/public_html/index.html
@@ -206,23 +206,23 @@
             <!-- images shown in modal -->
             <div class="lb-slides">
                 <div class="lb-numbertext">1 / 7</div>
-                <img class="lb-img" src="https://picsum.photos/seed/abcd/300/200">
+                <img class="lb-img" src="https://picsum.photos/seed/abcd/300/200" alt="">
             </div>
             <div class="lb-slides">
                 <div class="lb-numbertext">2 / 7</div>
-                <img class="lb-img" src="https://picsum.photos/seed/efgh/300/200">
+                <img class="lb-img" src="https://picsum.photos/seed/efgh/300/200" alt="Padlocks on a Fence">
             </div>
             <div class="lb-slides">
                 <div class="lb-numbertext">3 / 7</div>
-                <img class="lb-img" src="https://picsum.photos/seed/ijkl/300/200">
+                <img class="lb-img" src="https://picsum.photos/seed/ijkl/300/200" alt="">
             </div>
             <div class="lb-slides">
                 <div class="lb-numbertext">4 / 7</div>
-                <img class="lb-img" src="https://picsum.photos/seed/mnop/300/200">
+                <img class="lb-img" src="https://picsum.photos/seed/mnop/300/200" alt="">
             </div>
             <div class="lb-slides">
                 <div class="lb-numbertext">5 / 7</div>
-                <img class="lb-img" src="https://picsum.photos/seed/qrst/300/200">
+                <img class="lb-img" src="https://picsum.photos/seed/qrst/300/200" alt="">
             </div>
             <div class="lb-slides">
                 <div class="lb-numbertext">6 / 7</div>
