enabled color theme switching

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -59,7 +59,7 @@
             <ul class="menu">
                 <li><a id="home" class="navitem" href="#home">Home</a></li>
                 <li><a id="nav1" class="navitem" href="#navtarg1">Gallery</a></li>
-                <li><a id="nav2" class="navitem" href="#navtarg2">Blog</a> </li>
+                <li><a id="nav2" class="navitem" href="#navtarg2">Themes</a> </li>
                 <li><a id="nav3" class="navitem" href="#navtarg3">Contact</a></li>
             </ul>
         </nav>
@@ -136,7 +136,28 @@
             </p>
         </section>
         <section id="navtarg2" class="section-body">
-            <h2>Blog</h2>
+            <h2>Themes</h2>
+            <p>
+                Select a theme below and see the colors change. This demonstrates that CSS files can be loaded programatically.
+            </p>
+            <div id="theme_switch">
+                <form>
+                    <input checked id="th0" class="themesw" type="radio" name="themesw" value="./assets/css/nobs-default.css"> 
+                    <label for="th0" class="theme-sw"> - Default</label>
+                    <br>
+                    <input id="th1" class="themesw" type="radio" name="themesw" value="./assets/css/nobs-alt_1.css">
+                    <label for="th1" class="theme-sw"> - Theme #1</label>
+                    <br>
+                    <input id="th2" class="themesw" type="radio" name="themesw" value="./assets/css/nobs-alt_2.css">
+                    <label for="th2" class="theme-sw"> - Theme #2</label>
+                    <br>
+                    <input id="th3" class="themesw" type="radio" name="themesw" value="./assets/css/nobs-alt_3.css">
+                    <label for="th3" class="theme-sw"> - Theme #3</label>
+                    <br>
+                    <input id="th4" class="themesw" type="radio" name="themesw" value="./assets/css/nobs-alt_4.css">
+                    <label for="th4" class="theme-sw"> - Theme #4</label>
+                </form>
+            </div>
             <p>
                 Biltong do reprehenderit et mollit porchetta officia drumstick, t-bone pariatur exercitation nulla nostrud. Aliqua ea ut aliquip tongue nisi. Dolore magna elit ball tip doner qui ribeye culpa proident leberkas short loin. Chuck dolor ut excepteur, eiusmod brisket esse eu ham hock veniam ea kielbasa ball tip meatball bacon.
             </p>
