very minor changes

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -247,11 +247,11 @@
             </div>
             <div class="lb-slides">
                 <div class="lb-numbertext">6 / 7</div>
-                <img class="lb-img" src="https://picsum.photos/seed/uvwx/300/200">
+                <img class="lb-img" src="https://picsum.photos/seed/uvwx/300/200" alt="">
             </div>
             <div class="lb-slides">
                 <div class="lb-numbertext">7 / 7</div>
-                <img class="lb-img" src="https://picsum.photos/seed/yzyz/300/200">
+                <img class="lb-img" src="https://picsum.photos/seed/yzyz/300/200" alt="">
             </div>
             <!-- left & right buttons -->
             <a class="lb-prev" onclick="lb_plusSlides(-1)">&#10094;<small>&#10094;&#10094;&#10094;</small></a>
