--- a/public_html/index.html
+++ b/public_html/index.html
@@ -66,6 +66,7 @@
     </div>
     <!-- Primary Content -->
     <div id="main" class="main-content">
+        <!-- Home -->
         <div class="home-bg">
         <div class="home-bg-overlay">
         <section id="home" class="section-body home-body">
@@ -89,6 +90,7 @@
         </section>
         </div>
         </div>
+        <!-- Gallery -->
         <section id="navtarg1" class="section-body">
             <h2>Gallery</h2>
             <p>
@@ -135,6 +137,7 @@
                 Pork belly exercitation rump consectetur drumstick. Culpa laborum non tenderloin fatback cillum drumstick. Ham hock quis prosciutto nulla elit jowl et reprehenderit kielbasa turducken jerky frankfurter brisket burgdoggen bresaola. Shank est quis meatloaf in reprehenderit eiusmod venison brisket duis enim pork belly ipsum excepteur. Meatloaf t-bone porchetta esse. Frankfurter eiusmod occaecat et minim prosciutto in sirloin drumstick dolore turducken salami aliquip tongue in.
             </p>
         </section>
+        <!-- Themes -->
         <section id="navtarg2" class="section-body">
             <h2>Themes</h2>
             <p>
@@ -168,6 +171,7 @@
                 Turkey swine short loin consequat fugiat pork loin, voluptate pig doner incididunt cupim cupidatat sed culpa shank. Sausage sed drumstick chislic dolore burgdoggen. Beef ribs pastrami deserunt, laborum elit hamburger cupim est esse in shankle cillum consectetur aliquip in. Alcatra swine qui laborum spare ribs, chicken pig consequat short ribs brisket.
             </p>
         </section>
+        <!-- Contact -->
         <section id="navtarg3" class="section-body">
             <h2>Contact</h2>
             <p>
