moved slide caption above prev/next buttons

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -257,13 +257,13 @@
                 <div class="lb-numbertext">7 / 7</div>
                 <img class="lb-img" src="https://picsum.photos/seed/yzyz/300/200" alt="">
             </div>
+            <!-- caption under the image -->
+            <!-- <div class="lb-caption-container"> -->
+                <span id="lb_caption" class="lb-caption">.</span>
+            <!-- </div> -->
             <!-- left & right buttons -->
             <a class="lb-prev" onclick="lb_plusSlides(-1)">&#10094;<small>&#10094;&#10094;&#10094;</small></a>
             <a class="lb-next" onclick="lb_plusSlides(1)"><small>&#10095;&#10095;&#10095;</small>&#10095;</a>
-            <!-- caption under the image -->
-            <div class="lb-caption-container">
-                <p id="lb_caption" class="lb-caption"></p>
-            </div>
             <!-- here are the modal thumbnails -->
 <!--
             <div class="lb-column">
