added "devdebug"  section, for showing info when no console output

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -222,6 +222,16 @@
                 </div>
             </div>
         </section>
+        <!-- debugging output, edit as needed -->
+        <section id="devdebug" class="section-body" style="display:none;">
+            <ul>
+                <li id="totop_w">totop w = <span></span></li>
+                <li id="totop_h">totop h = <span></span></li>
+                <li id="totop_r">totop r = <span></span></li>
+                <li id="whobrowse">browser = <span></span></li>
+                <li id="">n/a<span></span></li>
+            </ul>
+        </section>
     </div>
     <!-- This is the lightbox modal, it also has clickable 
     thumbnails (commented out) under the selected image -->
