added device detection, mobile, tablet or desktop

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -229,6 +229,7 @@
                 <li id="totop_h">totop h = <span></span></li>
                 <li id="totop_r">totop r = <span></span></li>
                 <li id="whobrowse">browser = <span></span></li>
+                <li id="device">device = <span></span></li>
                 <li id="">n/a<span></span></li>
             </ul>
         </section>
