--- a/public_html/index.html
+++ b/public_html/index.html
@@ -230,6 +230,7 @@
                 <li id="totop_r">totop r = <span></span></li>
                 <li id="whobrowse">browser = <span></span></li>
                 <li id="device">device = <span></span></li>
+                <li id="mask">mask = <span></span></li>
                 <li id="">n/a<span></span></li>
             </ul>
         </section>
@@ -308,6 +309,7 @@
         <button id="gototop-button" class="gototop" onclick="jumpToTop()" title="Go to top of page">&#9650;</button>
     </footer>
     <!-- Stuff that makes it work :) -->
+    <script src="./assets/js/getbrowser.js"></script>
     <script src="./assets/js/utils.js"></script>
     <script src="./assets/js/nobs_logo.js"></script>
     <script src="./assets/js/nobs.js"></script>
