--- a/public_html/index.html
+++ b/public_html/index.html
@@ -181,8 +181,7 @@
     This form and CSS(nobs-contact.css) was originally found at:
         https://webdesign.tutsplus.com/tutorials/how-to-build-web-form-layouts-with-css-grid--cms-28776
 
-    Extensively Modified By: 
-        https://github.com/jxmot
+    Extensively Modified By: https://github.com/jxmot
 -->
             <div class="contact-container">
                 <div class="contact-form-wrapper">
