added #isgood to #devdebug

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -230,6 +230,7 @@
                 <li id="whobrowse">browser = <span></span></li>
                 <li id="device">device = <span></span></li>
                 <li id="mask">mask = <span></span></li>
+                <li id="isgood">isgood = <span></span></li>
                 <li id="">n/a<span></span></li>
             </ul>
         </section>
