--- a/public_html/index.html
+++ b/public_html/index.html
@@ -306,11 +306,16 @@
     <footer id="page-footer" class="footer">
         <h3 class="footer-text"><a href="https://github.com/jxmot" target=_blank>github.com/jxmot</a></h3>
         <!-- kept in the footer & keep it anchored with CSS -->
-        <button id="gototop-button" class="gototop" onclick="jumpToTop()" title="Go to top of page">&#9650;</button>
+        <button id="gototop-button" class="gototop" onclick="jumpToTop()" title="Go to top of page">
+            <!-- &#9650; \25B2 -->
+            <span id="gototop_span" class="gototop-span">&#9650;</span>
+        </button>
     </footer>
-    <!-- Stuff that makes it work :) -->
-    <script src="./assets/js/getbrowser.js"></script>
+    <!-- Stuff that makes it work :) 
+         The order is important, do not change it.
+    -->
     <script src="./assets/js/utils.js"></script>
+    <script src="./assets/js/getbrowser.js"></script>
     <script src="./assets/js/nobs_logo.js"></script>
     <script src="./assets/js/nobs.js"></script>
     <script src="./assets/js/nobs-contact.js"></script>
