renamed nobs_logo.js to nobs-logo.js, for consistency

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -316,7 +316,7 @@
     -->
     <script src="./assets/js/utils.js"></script>
     <script src="./assets/js/getbrowser.js"></script>
-    <script src="./assets/js/nobs_logo.js"></script>
+    <script src="./assets/js/nobs-logo.js"></script>
     <script src="./assets/js/nobs.js"></script>
     <script src="./assets/js/nobs-contact.js"></script>
     <script src="./assets/js/nobs-lightbox.js"></script>
