fixed indenting for #home_bg

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -67,28 +67,28 @@
     <!-- Primary Content -->
     <div id="main" class="main-content">
         <!-- Home -->
-        <div class="home-bg">
-        <div class="home-bg-overlay">
-        <section id="home" class="section-body home-body">
-            <h2 class="main-heading-title">A Working Nav-Menu</h2>
-            <p class="main-heading-text">Ready for use! NO BOOTSTRAP!!!</p>
-            <p>
-                Spicy jalapeno bacon ipsum dolor amet magna pork chop turducken occaecat consequat. Et pig velit buffalo. Boudin eu bresaola proident sirloin pancetta in esse leberkas irure jerky. Cow quis occaecat, consectetur chicken qui ut.
-            </p>
-            <p>
-                Non consequat t-bone, ham hock kevin doner pork chop pig flank. Kielbasa adipisicing tri-tip, pancetta irure occaecat dolore chislic rump. T-bone tenderloin ut laboris consequat esse, meatloaf in sint bacon quis ground round. Corned beef irure ut tenderloin cupim anim laborum. Ex sed kevin pork chop ut incididunt beef ribs dolore commodo cow id.
-            </p>
-            <p>
-                Biltong do reprehenderit et mollit porchetta officia drumstick, t-bone pariatur exercitation nulla nostrud. Aliqua ea ut aliquip tongue nisi. Dolore magna elit ball tip doner qui ribeye culpa proident leberkas short loin. Chuck dolor ut excepteur, eiusmod brisket esse eu ham hock veniam ea kielbasa ball tip meatball bacon.
-            </p>
-            <p>
-                Consequat magna sunt, id turkey picanha reprehenderit. Nostrud eu in pastrami sausage aliquip tail magna aute chuck. Sirloin fugiat tongue, beef proident ham hock in picanha ad cupim aute adipisicing andouille. Magna laborum laboris, deserunt fugiat drumstick cow dolore eiusmod non bresaola swine fatback rump. Tempor rump prosciutto, tenderloin consectetur biltong turducken chicken leberkas alcatra dolor elit eiusmod meatloaf aliqua. Ground round shoulder et ullamco ad labore cillum tail chicken pork chop excepteur pancetta nisi.
-            </p>
-            <p>
-                Turkey swine short loin consequat fugiat pork loin, voluptate pig doner incididunt cupim cupidatat sed culpa shank. Sausage sed drumstick chislic dolore burgdoggen. Beef ribs pastrami deserunt, laborum elit hamburger cupim est esse in shankle cillum consectetur aliquip in. Alcatra swine qui laborum spare ribs, chicken pig consequat short ribs brisket.
-            </p>
-        </section>
-        </div>
+        <div id="home_bg" class="home-bg">
+            <div class="home-bg-overlay">
+                <section id="home" class="section-body home-body">
+                    <h2 class="main-heading-title">A Working Nav-Menu</h2>
+                    <p class="main-heading-text">Ready for use! NO BOOTSTRAP!!!</p>
+                    <p>
+                        Spicy jalapeno bacon ipsum dolor amet magna pork chop turducken occaecat consequat. Et pig velit buffalo. Boudin eu bresaola proident sirloin pancetta in esse leberkas irure jerky. Cow quis occaecat, consectetur chicken qui ut.
+                    </p>
+                    <p>
+                        Non consequat t-bone, ham hock kevin doner pork chop pig flank. Kielbasa adipisicing tri-tip, pancetta irure occaecat dolore chislic rump. T-bone tenderloin ut laboris consequat esse, meatloaf in sint bacon quis ground round. Corned beef irure ut tenderloin cupim anim laborum. Ex sed kevin pork chop ut incididunt beef ribs dolore commodo cow id.
+                    </p>
+                    <p>
+                        Biltong do reprehenderit et mollit porchetta officia drumstick, t-bone pariatur exercitation nulla nostrud. Aliqua ea ut aliquip tongue nisi. Dolore magna elit ball tip doner qui ribeye culpa proident leberkas short loin. Chuck dolor ut excepteur, eiusmod brisket esse eu ham hock veniam ea kielbasa ball tip meatball bacon.
+                    </p>
+                    <p>
+                        Consequat magna sunt, id turkey picanha reprehenderit. Nostrud eu in pastrami sausage aliquip tail magna aute chuck. Sirloin fugiat tongue, beef proident ham hock in picanha ad cupim aute adipisicing andouille. Magna laborum laboris, deserunt fugiat drumstick cow dolore eiusmod non bresaola swine fatback rump. Tempor rump prosciutto, tenderloin consectetur biltong turducken chicken leberkas alcatra dolor elit eiusmod meatloaf aliqua. Ground round shoulder et ullamco ad labore cillum tail chicken pork chop excepteur pancetta nisi.
+                    </p>
+                    <p>
+                        Turkey swine short loin consequat fugiat pork loin, voluptate pig doner incididunt cupim cupidatat sed culpa shank. Sausage sed drumstick chislic dolore burgdoggen. Beef ribs pastrami deserunt, laborum elit hamburger cupim est esse in shankle cillum consectetur aliquip in. Alcatra swine qui laborum spare ribs, chicken pig consequat short ribs brisket.
+                    </p>
+                </section>
+            </div>
         </div>
         <!-- Gallery -->
         <section id="navtarg1" class="section-body">
