--- a/public_html/index.html
+++ b/public_html/index.html
@@ -178,7 +178,7 @@
                 This was created using CSS grid. 
             </p>
 <!--
-    This form and CSS(nobs-contact.css) was originally found at:
+    This form and CSS(nobs-contact.css) were originally found at:
         https://webdesign.tutsplus.com/tutorials/how-to-build-web-form-layouts-with-css-grid--cms-28776
 
     Extensively Modified By: https://github.com/jxmot
@@ -302,7 +302,7 @@
 -->
         </div>
     </div>
-    <!-- Page footer -->
+    <!-- Page Footer -->
     <footer id="page-footer" class="footer">
         <h3 class="footer-text"><a href="https://github.com/jxmot" target=_blank>github.com/jxmot</a></h3>
         <!-- kept in the footer & keep it anchored with CSS -->
