in #devdebug added #ljs_test for loadjscript_test()

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -231,6 +231,7 @@
                 <li id="device">device = <span></span></li>
                 <li id="mask">mask = <span></span></li>
                 <li id="isgood">isgood = <span></span></li>
+                <li id="ljs_test"><span></span></li>
                 <li id="">n/a<span></span></li>
             </ul>
         </section>
