added id "home_bg_overlay"

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -68,7 +68,7 @@
     <div id="main" class="main-content">
         <!-- Home -->
         <div id="home_bg" class="home-bg">
-            <div class="home-bg-overlay">
+            <div id="home_bg_overlay" class="home-bg-overlay">
                 <section id="home" class="section-body home-body">
                     <h2 class="main-heading-title">A Working Nav-Menu</h2>
                     <p class="main-heading-text">Ready for use! NO BOOTSTRAP!!!</p>
