added gallery info content

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -96,6 +96,14 @@
             <p>
                 This was created using CSS grid. Click on any image below and a "lightbox" will open.
             </p>
+            <p>
+                This gallery is created when the page is loaded. JavaScript is used for interating 
+                through a list of images and generating the necessary HTML for each image.
+            </p>
+            <p>
+                The same is true for the lightbox. But the HTML is created when an image in 
+                the gallery has been selected.
+            </p>
             <!-- https://picsum.photos/ -->
             <div id="gallery" class="gallery">
             </div>
