--- a/public_html/index.html
+++ b/public_html/index.html
@@ -211,7 +211,8 @@
                 <li id="device">device = <span></span></li>
                 <li id="mask">mask = <span></span></li>
                 <li id="isgood">isgood = <span></span></li>
-                <li id="ljs_test"><span></span></li>
+                <li id="ljs_test">ljs_test = <span></span></li>
+                <li id="mqstate">mqstate = <span></span></li>
                 <li id="">n/a<span></span></li>
             </ul>
         </section>
