--- a/public_html/index.html
+++ b/public_html/index.html
@@ -213,6 +213,8 @@
                 <li id="isgood">isgood = <span></span></li>
                 <li id="ljs_test">ljs_test = <span></span></li>
                 <li id="mqstate">mqstate = <span></span></li>
+                <li id="portrait">portrait = <span></span></li>
+                <li id="landscape">landscape = <span></span></li>
                 <li id="">n/a<span></span></li>
             </ul>
         </section>
@@ -248,6 +250,7 @@
     <script src="./assets/js/getbrowser.js"></script>
     <script src="./assets/js/nobs-images.js"></script>
     <script src="./assets/js/nobs-logo.js"></script>
+    <script src="./assets/js/nobs-devdebug.js"></script>
     <script src="./assets/js/nobs.js"></script>
     <script src="./assets/js/nobs-contact.js"></script>
     <script src="./assets/js/nobs-lightbox.js"></script>
