added cookies.js, added comments

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -245,15 +245,25 @@
     </footer>
     <!-- Stuff that makes it work :) 
          The order is important, do not change it.
+
+            utils.js+cookies.js+getbrowser.js+nobs-images.js+nobs-logo.js+nobs-devdebug.js+nobs.js+nobs-contact.js+nobs-lightbox.js+totop.js
     -->
     <script src="./assets/js/utils.js"></script>
+    <!-- Cookie & Consent Management -->
+    <script src="./assets/js/cookies.js"></script>
+    <!-- Browser Detection -->
     <script src="./assets/js/getbrowser.js"></script>
+    <!-- Image Pool for Gallery -->
     <script src="./assets/js/nobs-images.js"></script>
+    <!-- Navbar Logo Management -->
     <script src="./assets/js/nobs-logo.js"></script>
+    <!-- Development & Debug Output -->
     <script src="./assets/js/nobs-devdebug.js"></script>
+    <!-- Page Management & Specialty Page Sections -->
     <script src="./assets/js/nobs.js"></script>
     <script src="./assets/js/nobs-contact.js"></script>
     <script src="./assets/js/nobs-lightbox.js"></script>
+    <!-- "To Top" Button -->
     <script src="./assets/js/totop.js"></script>
 </body>
 </html>
