added cookies.css, added comments

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -14,6 +14,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
     <link rel="icon" href="./favicon.ico">
     <link rel="manifest" href="./site.webmanifest">
+
     <!-- CSS reset (slightly modified by me) -->
     <link rel="stylesheet" href="./assets/css/reseter.css">
     <!-- color palettes -->
@@ -24,7 +25,8 @@
     <!-- <link rel="stylesheet" href="./assets/css/nobs-alt_2.css"> -->
     <!-- <link rel="stylesheet" href="./assets/css/nobs-alt_3.css"> -->
     <!-- <link rel="stylesheet" href="./assets/css/nobs-alt_4.css"> -->
-    <!-- the rest of it... -->
+    <!-- Cookie & Consent Management -->
+    <link rel="stylesheet" href="./assets/css/cookies.css">
     <link rel="stylesheet" href="./assets/css/nobs.css">
     <link rel="stylesheet" href="./assets/css/nobs-totop.css"/>
     <!-- stuff that uses the CSS grid (order is important!) -->
