minor changed and edited comments

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -66,7 +66,7 @@
             </ul>
         </nav>
     </div>
-    <!-- Primary Content -->
+    <!-- Primary Content (page top, see nobs.js:pagetop) -->
     <div id="main" class="main-content">
         <!-- Home -->
         <div id="home_bg" class="home-bg">
@@ -75,7 +75,7 @@
                     <h2 class="main-heading-title">A Working Nav-Menu</h2>
                     <p class="main-heading-text">Ready for use! NO BOOTSTRAP!!!</p>
                     <p>
-                        Spicy jalapeno bacon ipsum dolor amet magna pork chop turducken occaecat consequat. Et pig velit buffalo. Boudin eu bresaola proident sirloin pancetta in esse leberkas irure jerky. Cow quis occaecat, consectetur chicken qui ut.
+                        Spicy jalapeno <a style="color: white;font-weight: 900;" href="https://baconipsum.com/" target=_blank>bacon ipsum</a> dolor amet magna pork chop turducken occaecat consequat. Et pig velit buffalo. Boudin eu bresaola proident sirloin pancetta in esse leberkas irure jerky. Cow quis occaecat, consectetur chicken qui ut.
                     </p>
                     <p>
                         Non consequat t-bone, ham hock kevin doner pork chop pig flank. Kielbasa adipisicing tri-tip, pancetta irure occaecat dolore chislic rump. T-bone tenderloin ut laboris consequat esse, meatloaf in sint bacon quis ground round. Corned beef irure ut tenderloin cupim anim laborum. Ex sed kevin pork chop ut incididunt beef ribs dolore commodo cow id.
@@ -99,14 +99,13 @@
                 This was created using CSS grid. Click on any image below and a "lightbox" will open.
             </p>
             <p>
-                This gallery is created when the page is loaded. JavaScript is used for interating 
+                This gallery is created when the page is loaded. JavaScript is used for iterating 
                 through a list of images and generating the necessary HTML for each image.
             </p>
             <p>
                 The same is true for the lightbox. But the HTML is created when an image in 
                 the gallery has been selected.
             </p>
-            <!-- https://picsum.photos/ -->
             <div id="gallery" class="gallery">
             </div>
             <p>
