in tag IDs changed "-" (hypen) to "_"(underscore) for naming consistency

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -29,26 +29,24 @@
     <link rel="stylesheet" href="./assets/css/cookies.css">
     <link rel="stylesheet" href="./assets/css/nobs.css">
     <link rel="stylesheet" href="./assets/css/nobs-totop.css"/>
-    <!-- stuff that uses the CSS grid (order is important!) -->
     <link rel="stylesheet" href="./assets/css/nobs-gallery.css"/>
     <link rel="stylesheet" href="./assets/css/nobs-contact.css"/>
-
     <link rel="stylesheet" href="./assets/css/nobs-lightbox.css">
 
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Navigation Bar -->
-    <div id="nav-header" class="nav-header">
+    <div id="nav_header" class="nav-header">
         <!-- Logo, reloads the page. -->
-        <div id="nav-logo-choice_text" style="display:none;">
-            <a id="nav-logo_link" class="nav-logo" href="./index.html">
-                <div id="nav-logo-text">NOBS</div>
+        <div id="nav_logo_choice_text" style="display:none;">
+            <a id="nav_logo_link" class="nav-logo" href="./index.html">
+                <div id="nav_logo_text">NOBS</div>
             </a>
         </div>
-        <div id="nav-logo-choice_icon" style="display:none;">
-            <a id="nav-logo_link" class="nav-logo-img" href="./index.html">
-                <img id="logo-img" class="logo-img">
+        <div id="nav_logo_choice_icon" style="display:none;">
+            <a id="nav_logo_link" class="nav-logo-img" href="./index.html">
+                <img id="logo_img" class="logo-img">
             </a>
         </div>
         <!-- Hamburger Icon -->
@@ -256,10 +254,10 @@
         </div>
     </div>
     <!-- Page Footer -->
-    <footer id="page-footer" class="footer">
+    <footer id="page_footer" class="footer">
         <h3 class="footer-text"><a href="https://github.com/jxmot" target=_blank>github.com/jxmot</a></h3>
         <!-- kept in the footer & keep it anchored with CSS -->
-        <button id="gototop-button" class="gototop" onclick="jumpToTop()" title="Go to top of page">
+        <button id="gototop_button" class="gototop" onclick="jumpToTop()" title="Go to top of page">
             <!-- &#9650; \25B2 -->
             <span id="gototop_span" class="gototop-span">&#9650;</span>
         </button>
