added cookie consent dialog

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -253,6 +253,29 @@
             <a class="lb-next" onclick="lb_plusSlides(1)"><small>&#10095;&#10095;&#10095;</small>&#10095;</a>
         </div>
     </div>
+    <!-- Cookie Consent -->
+    <div id="cookie_con" class="cookie-con">
+        <div class="cookie-con-body">
+            <div class="cookie-con-msg">
+                <p id="cookie_con_text" class="cookie-con-text">
+                    This page uses cookies. In fact, it uses 2 of them. The first one is for recording that you have 
+                    consented, and the second one records your theme choice.
+                </p>
+            </div>
+            <div class="cookie-con-accept">
+                <button id="cc_accbutton" 
+                class="cookie-con-button cookie-con-accbutton-bg">
+                Accept
+                </button>
+            </div>
+            <div class="cookie-con-decline">
+                <button id="cc_decbutton" 
+                class="cookie-con-button cookie-con-decbutton-bg">
+                DECLINE
+                </button>
+            </div>
+        </div>
+    </div>
     <!-- Page Footer -->
     <footer id="page_footer" class="footer">
         <h3 class="footer-text"><a href="https://github.com/jxmot" target=_blank>github.com/jxmot</a></h3>
