added a splash on page load, timed and fades out

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -25,6 +25,8 @@
     <!-- <link rel="stylesheet" href="./assets/css/nobs-alt_2.css"> -->
     <!-- <link rel="stylesheet" href="./assets/css/nobs-alt_3.css"> -->
     <!-- <link rel="stylesheet" href="./assets/css/nobs-alt_4.css"> -->
+    <!-- Splash Styling -->
+    <link rel="stylesheet" href="./assets/css/splash.css">
     <!-- Cookie & Consent Management -->
     <link rel="stylesheet" href="./assets/css/cookies.css">
     <link rel="stylesheet" href="./assets/css/nobs.css">
@@ -36,6 +38,13 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!-- Initial Splash, covers the entire viewing area 
+    including the navbar, and then fades to transparent 
+    -->
+    <div id="top_splash" class="splash">
+        <h3 class="splash-text">Ready for use! NO BOOTSTRAP!!</h3>
+        <img class="splash-img">
+    </div>
     <!-- Navigation Bar -->
     <div id="nav_header" class="nav-header">
         <!-- Logo, reloads the page. -->
@@ -301,6 +310,8 @@
     <script src="./assets/js/nobs-logo.js"></script>
     <!-- Development & Debug Output -->
     <script src="./assets/js/nobs-devdebug.js"></script>
+    <!-- Initial Splash -->
+    <script src="./assets/js/splash.js"></script>
     <!-- Page Management & Specialty Page Sections -->
     <script src="./assets/js/nobs.js"></script>
     <script src="./assets/js/nobs-contact.js"></script>
